[package]
name = "userbin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.4"
dialoguer = "0.11.0"
once_cell = "1.18.0"
reqwest = "0.11.22"
structopt = "0.3.26"
tokio = { version = "1.34.0", features = ["full"] }
